<resources>
    <string name="app_name">My Application</string>
    <string name="name">Kai</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="text">"A ariticl dleoj dkjk aire dkfloee "</string>
    <string name="text1">"A ariticl dleoj dkjk aire dkfloee A ariticl dleoj dkjk aire dkfloee A
        \n ariticl dleoj dkjk aire dkfloee A ariticl dleoj dkjk aire dkfloee
        \nA ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \ndkjk aire dkfloee A ariticl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj
        dkjk aire dkfloee A ariticl dleoj dkjk aire dkfloee
        \nA ariticl dleoj dkjk aire dkfloee A ariticl dleoj dkjk a
        ire dkfloee A ariticl dleoj dkjk aire dkfloee kfloee floee
        \ndkjk aire dkfloee A ariticl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \ndkjk aire dkfloee A ariticl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \ndkjk aire dkfloee A ariticl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \ndkjk aire dkfloee A ariticl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \ndkjk aire dkfloee A ariticl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj\ndkjk aire dkfloee A arit
        icl dleoj dkjk aire dkA ariticl dleoj dkjk
        \n\naire dkfloee A ariticl dleoj dkjk aire dkfloee A ariticl dleoj
        \n\ndkjk aire dkfloee A ariticl dleoj dkjk aire dA
        \n\nariticl dleoj dkjk aire dkfloee A ariticl dleoj"</string>
    <string name="what_is_your_nickname">What is your nickname</string>
    <string name="done">Done</string>
</resources>